--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ckeditor/ckeditor5-angular": "^7.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+    "@ckeditor/ckeditor5-core": "^41.0.0",
+    "@ckeditor/ckeditor5-engine": "^41.0.0",
+    "@ckeditor/ckeditor5-utils": "^41.0.0",
+    "@ckeditor/ckeditor5-watchdog": "^41.0.0",
     "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
+    "html-docx-js-typescript": "^0.1.5",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.44",
     "rxjs": "~7.8.0",
