--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-engine": "^41.0.0",
     "@ckeditor/ckeditor5-utils": "^41.0.0",
     "@ckeditor/ckeditor5-watchdog": "^41.0.0",
+    "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
     "html-docx-js-typescript": "^0.1.5",
